Fix resize issue for trash button in chrome and overflowing spinner in .update class
fixes #6108

--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -201,9 +201,9 @@ input[type="submit"].enabled {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	position: fixed;
+	right: 0;
+	left: 80px;
 	height: 44px;
-	width: 100%;
-	padding-right: 75px;
 	margin: 0;
 	background: #eee;
 	border-bottom: 1px solid #e7e7e7;
